--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,11 @@ server.port=8080
 
 # 数据库驱动：
 spring.datasource.test.uc.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.test.uc.jdbc-url=jdbc:mysql://192.168.88.201:13006/test_mysql?serverTimezone=UTC&zeroDateTimeBehavior=CONVERT_TO_NULL&characterEncoding=utf8
+spring.datasource.test.uc.jdbc-url=jdbc:mysql://192.168.88.201:13006/gansu_data_analysis?serverTimezone=UTC&zeroDateTimeBehavior=CONVERT_TO_NULL&characterEncoding=utf8
+#spring.datasource.test.uc.jdbc-url=jdbc:mysql://192.168.88.201:13006/hdkt_trail?serverTimezone=UTC&zeroDateTimeBehavior=CONVERT_TO_NULL&characterEncoding=utf8
 # 数据库用户名&密码：
+spring.datasource.test.uc.username=root
+spring.datasource.test.uc.password=zgnw0xNZa5pexxhk
 
 
 # 数据库驱动：
@@ -20,8 +23,12 @@ spring.datasource.prod.uc.driver-class-name=com.mysql.cj.jdbc.Driver
 #生产数据库连接地址
 spring.datasource.prod.uc.jdbc-url=jdbc:mysql://localhost:27336/hdkt_prod?serverTimezone=UTC&zeroDateTimeBehavior=CONVERT_TO_NULL&characterEncoding=utf8
 # 数据库用户名&密码：
+spring.datasource.prod.uc.username=readonly
+spring.datasource.prod.uc.password=KLA8V@6Ksmdpbz!cX6GrY24fD
 #spring.datasource.prod.uc.jdbc-url=jdbc:mysql://192.168.88.201:13006/test_mysql?serverTimezone=UTC&zeroDateTimeBehavior=CONVERT_TO_NULL&characterEncoding=utf8
 ## 数据库用户名&密码：
+#spring.datasource.prod.uc.username=root
+#spring.datasource.prod.uc.password=zgnw0xNZa5pexxhk
 
 #com.mycompany.mavenspringboot.controller 日志 WARN级别输出
 logging.level.com.qtone.util.saveSchool=WARN
@@ -32,19 +39,24 @@ logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 
 ### gps mongodb
 #spring.data.mongodb.gps.uri=mongodb://192.168.88.202:27217/hdkt_gps
-### analysis mongodb
-#spring.data.mongodb.analysis.uri=mongodb://192.168.88.202:27217/analysis
-### middleware mongodb
-#spring.data.mongodb.middleware.uri=mongodb://192.168.88.202:27217/middleware
-### attendance mongodb
-#spring.data.mongodb.attendance.uri=mongodb://192.168.88.202:27217/hdkt_attendance
-## gps mongodb
-spring.data.mongodb.gps.uri=mongodb://localhost:27317/hdkt_gps
 ## analysis mongodb
-spring.data.mongodb.analysis.uri=mongodb://localhost:27317/analysis
+spring.data.mongodb.analysis.uri=mongodb://192.168.88.202:27217/analysis
 ## middleware mongodb
-spring.data.mongodb.middleware.uri=mongodb://localhost:27317/middleware
+#spring.data.mongodb.middleware.uri=mongodb://192.168.88.202:27217/middleware
 ## attendance mongodb
 spring.data.mongodb.attendance.uri=mongodb://localhost:27317/hdkt_attendance
+## seniorCard mongodb
+spring.data.mongodb.seniorcard.uri=mongodb://192.168.88.202:27217/hdkt_job_card
+## jobCard mongodb
+#spring.data.mongodb.jobcard.uri=mongodb://192.168.88.202:27217/hdkt_job_card
+spring.data.mongodb.jobcard.uri=mongodb://localhost:27317/hdkt_job_card
+## gps mongodb
+spring.data.mongodb.gps.uri=mongodb://localhost:27317/hdkt_gps
+### analysis mongodb
+#spring.data.mongodb.analysis.uri=mongodb://localhost:27317/analysis
+## middleware mongodb
+spring.data.mongodb.middleware.uri=mongodb://localhost:27317/middleware
+### attendance mongodb
+#spring.data.mongodb.attendance.uri=mongodb://localhost:27317/hdkt_attendance
 
 
